# supervise

./: CMakeLists.txt  LICENSE  README.md  main.cpp
lib/processsupervisor/: CMakeLists.txt  processsupervisor.cpp  processsupervisor.h  safefork.cpp  safefork.h
lib/signalmonitor/: CMakeLists.txt  signalmonitor.cpp  signalmonitor.h
